Revision history for TAP-Parser

0.50_07
    - Add a --directives switch to 'runtests' which only shows test results
      with directives (such as 'TODO' or 'SKIP').
    - Removed some dead code from TAPx::Parser.
    - Added color support for Windows using Win32::Console.
    - Made Color::failure_output reset colors before printing
      the trailing newline.
    - Corrected some issues with the 'runtests' docs and removed some
      performance notes which no longer seem accurate.
    - Fixed bug whereby if tests without file extensions were included then
      the spacing of the result leaders would be off.
    - execrc file is now a YAML file.
    - Removed white background on the test failures.  It was too garish for
      me.  Just more proof that we need better ways of overriding color
      support.
    - Started work on TAPx::Harness::Compatible. Right now it's mainly just
      a direct lift of Test::Harness to make sure the tests work.
    - Commented out use Data::Dumper::Simple in T::Harness.pm - it's not
      a core module.
    - Added next_raw to TAPx::Parser::Iterator which skips any fixes for
      quirky TAP that are implemented by next. Used to support
      TAPx::Harness::Compatible::Iterator
    - Applied our version number to all T::H::Compatible modules
    - Removed T::H::C::Assert. It's documented as being private to
      Test::Harness and we're not going to need it.
    - Refactored runtests to call aggregate_tests to expose the
      interface we need for the compatibility layer.
    - Make it possible to pass an end time to summary so that it needn't
      be called immediately after the tests complete.
    - Moved callback handling into TAPx::Base and altered TAPx::Parse
      to use it.
    - Made TAPx::Harness into a subclass of TAPx::Base and implemented
      made_parser callback.
    - Moved the despatch of callbacks out of run and into next so that
      they're called when TAPx::Harness iterates through the results.