@@ -58,6 +58,7 @@ my %samples = (
                 has_skip      => FALSE,
                 has_todo      => FALSE,
                 number        => 1,
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -68,6 +69,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 2,
                 description   => "Megathrusters are go",
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -78,6 +80,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 3,
                 description   => "Head formed",
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -88,6 +91,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 4,
                 description   => "Blazing sword formed",
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -98,7 +102,88 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 5,
                 description   => "Robeast destroyed",
+                is_unplanned  => FALSE,
             }
+        ],
+        plan          => '1..5',
+        passed        => [ 1 .. 5 ],
+        actual_passed => [ 1 .. 5 ],
+        failed        => [],
+        actual_failed => [],
+        todo          => [],
+        todo_passed   => [],
+        skipped       => [],
+        good_plan     => TRUE,
+        is_good_plan  => TRUE,
+        tests_planned => 5,
+        tests_run     => 5,
+        parse_errors  => [],
+        'exit'        => 0,
+        wait          => 0,
+    },
+    descriptive_trailing => {
+        results => [
+            {   actual_passed => TRUE,
+                is_actual_ok  => TRUE,
+                description   => "Interlock activated",
+                passed        => TRUE,
+                is_ok         => TRUE,
+                is_test       => TRUE,
+                has_skip      => FALSE,
+                has_todo      => FALSE,
+                number        => 1,
+                is_unplanned  => FALSE,
+            },
+            {   actual_passed => TRUE,
+                is_actual_ok  => TRUE,
+                passed        => TRUE,
+                is_ok         => TRUE,
+                is_test       => TRUE,
+                has_skip      => FALSE,
+                has_todo      => FALSE,
+                number        => 2,
+                description   => "Megathrusters are go",
+                is_unplanned  => FALSE,
+            },
+            {   actual_passed => TRUE,
+                is_actual_ok  => TRUE,
+                passed        => TRUE,
+                is_ok         => TRUE,
+                is_test       => TRUE,
+                has_skip      => FALSE,
+                has_todo      => FALSE,
+                number        => 3,
+                description   => "Head formed",
+                is_unplanned  => FALSE,
+            },
+            {   actual_passed => TRUE,
+                is_actual_ok  => TRUE,
+                passed        => TRUE,
+                is_ok         => TRUE,
+                is_test       => TRUE,
+                has_skip      => FALSE,
+                has_todo      => FALSE,
+                number        => 4,
+                description   => "Blazing sword formed",
+                is_unplanned  => FALSE,
+            },
+            {   actual_passed => TRUE,
+                is_actual_ok  => TRUE,
+                passed        => TRUE,
+                is_ok         => TRUE,
+                is_test       => TRUE,
+                has_skip      => FALSE,
+                has_todo      => FALSE,
+                number        => 5,
+                description   => "Robeast destroyed",
+                is_unplanned  => FALSE,
+            },
+            {   is_plan       => TRUE,
+                raw           => '1..5',
+                tests_planned => 5,
+                passed        => TRUE,
+                is_ok         => TRUE,
+            },
         ],
         plan          => '1..5',
         passed        => [ 1 .. 5 ],
@@ -454,6 +539,7 @@ my %samples = (
                 number        => 1,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -465,6 +551,7 @@ my %samples = (
                 number        => 2,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -476,6 +563,7 @@ my %samples = (
                 number        => 3,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -487,6 +575,7 @@ my %samples = (
                 number        => 4,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -498,6 +587,7 @@ my %samples = (
                 number        => 4,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -509,6 +599,7 @@ my %samples = (
                 number        => 5,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -520,6 +611,7 @@ my %samples = (
                 number        => 6,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -531,6 +623,7 @@ my %samples = (
                 number        => 7,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -542,6 +635,7 @@ my %samples = (
                 number        => 8,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -553,23 +647,25 @@ my %samples = (
                 number        => 9,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
-                passed        => TRUE,
-                is_ok         => TRUE,
+                passed        => FALSE,
+                is_ok         => FALSE,
                 is_test       => TRUE,
                 has_skip      => FALSE,
                 has_todo      => FALSE,
                 number        => 10,
                 description   => '',
                 explanation   => '',
+                is_unplanned  => TRUE,
             },
         ],
         plan          => '1..10',
-        passed        => [ 1 .. 4, 4 .. 10 ],
+        passed        => [ 1 .. 4, 4 .. 9 ],
         actual_passed => [ 1 .. 4, 4 .. 10 ],
-        failed        => [],
+        failed        => [ 10 ],
         actual_failed => [],
         todo          => [],
         todo_passed   => [],
@@ -779,6 +875,7 @@ my %samples = (
                 has_skip      => FALSE,
                 has_todo      => FALSE,
                 number        => 1,
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -789,6 +886,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 2,
                 description   => "",
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -799,6 +897,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 3,
                 description   => "",
+                is_unplanned  => FALSE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -809,6 +908,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 4,
                 description   => "",
+                is_unplanned  => TRUE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -819,6 +919,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 5,
                 description   => "",
+                is_unplanned  => TRUE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -829,6 +930,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 6,
                 description   => "",
+                is_unplanned  => TRUE,
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -839,6 +941,7 @@ my %samples = (
                 has_todo      => FALSE,
                 number        => 7,
                 description   => "",
+                is_unplanned  => TRUE,
             },
         ],
         plan          => '1..3',
@@ -2225,7 +2328,7 @@ my %HANDLER_FOR = (
 
 foreach my $test ( sort keys %samples ) {
 
-    #next unless 'stdout_stderr' eq $test;
+    #next unless 'duplicates' eq $test;
     my $details = $samples{$test};
     my $results = delete $details->{results};
     my $args    = delete $details->{__ARGS__} || { switches => '' };
