@@ -1,0 +1,8 @@
+print <<DUMMY_TEST;
+ok 1    Interlock activated
+ok 2    Megathrusters are go
+ok 3    Head formed
+ok 4    Blazing sword formed
+ok 5    Robeast destroyed
+1..5
+DUMMY_TEST
